--- a/config.yaml
+++ b/config.yaml
@@ -1,23 +1,22 @@
-# :: Это пример использования однострочного комментария
+# Это пример тестового yaml файла
 CONFIG:
-  # Константы
   TIMEOUT: 30
-  # Массив значений
   ENDPOINTS:
     - "login"
     - "register"
     - "reset_password"
-  USERS:                  # Массив строк
+  USERS:
     - "admin"
     - "user"
     - "guest"
-  CREDENTIALS:            # Вложенный объект
+  CREDENTIALS:
     USERNAME: "admin"
     PASSWORD: "securepassword"
   SETTINGS:
-    MODES: ["basic", "advanced", "expert"] # Массив строк
-    LIMITS: [100, 200, 300]                # Массив чисел
-  # Использование констант
+    MODES:
+      ["basic", "advanced", "expert"]
+    LIMITS:
+      [100, 200, 300]
   CALCULATIONS:
     VALUE: 100
-    RESULT: "|VALUE1 + VALUE2|"
+    RESULT: "|VALUE + TIMEOUT|"
